--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url= jdbc:mysql://localhost:3306/tour_platform?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url= jdbc:mysql://database-1.cj0oiwsyc9qh.us-east-2.rds.amazonaws.com:3306/tour_platform?useSSL=false&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=rootawstours
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
